--- a/examples/index.html
+++ b/examples/index.html
@@ -7,6 +7,13 @@
     </head>
     
     <body>
+        <style>
+            body {
+                font-family: "Roboto";
+                background-color: #ededed;
+            }
+        </style>
+
         <div id="app"></div>
     </body>
     
